--- a/css/styles.scss
+++ b/css/styles.scss
@@ -15,7 +15,7 @@ body{
 
 .filmlinks{
     display: grid;
-    grid-template-columns: 30% 30% 30%;
+    grid-template-columns: 18% 18% 18% 18% 18%;
     justify-content: space-around;
     gap: 10px;
 }
@@ -26,4 +26,32 @@ body{
     background-color: green;
     text-align: center;
     cursor: pointer;
+}
+
+.searchheader{
+    text-align: center;
+}
+
+@media screen and (max-width: 1600px){
+    .filmlinks{
+        grid-template-columns: 23% 23% 23% 23%;
+    }
+}
+
+@media screen and (max-width: 1280px){
+    .filmlinks{
+        grid-template-columns: 30% 30% 30%;
+    }
+}
+
+@media screen and (max-width: 950px){ 
+    .filmlinks{
+        grid-template-columns: 40% 40%;
+    }
+}
+
+@media screen and (max-width: 650px){
+    .filmlinks{
+        grid-template-columns: 95%;
+    }
 }
